--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom footer snippets -->
 <div class="page__footer-logo">
-  <a href="https://cd.foundation/" target="_blank"><img src="{{ site.url}}/assets/images/cdf-color.png" alt="CD Foundation logo"></a>
+  <a href="https://cd.foundation/" target="_blank"><img src="/spinnaker.github.io/assets/images/cdf-color.png" alt="CD Foundation logo"></a>
 </div>
 <!-- end custom footer snippets -->
